veil-tests/src/compile_tests/fail/redactable_multiple_fields.rs
fn main() {}

#[derive(veil::Redactable)]
struct Foo {
    bar: String,
    baz: String
}
